samples/_failures_safe/1761075335_2d3561_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf211093.c: In function ‘main’:
./samples/SAFE/__tmp_bf211093.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
